--- a/default.html
+++ b/default.html
@@ -16,7 +16,7 @@
 <body>
    <br /><br /><br /><br /><br />
     <br /><br /><br /><br /><br />
-    <button onclick="HelloSnake()" id="Next">CLICK TO START THE GAME</button>
+    <button id="Next" style="background-color:black; color:red;" onclick="HelloSnake()">CLICK TO START THE GAME</button>
     <br />
 </body>
 </html>
